--- a/WPFDemo/MainWindow.xaml
+++ b/WPFDemo/MainWindow.xaml
@@ -6,5 +6,69 @@
         xmlns:local="clr-namespace:WPFDemo"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <!--
+    <StackPanel Orientation="Vertical">
+        <Label>
+            Hello World!
+        </Label>
+        <Button>
+            Click Me!
+        </Button> 
+
+        <Rectangle Fill="Beige" Height="50">
+            
+        </Rectangle>
+    </StackPanel>
+    
+    <DockPanel>
+        <Rectangle Fill="Beige" DockPanel.Dock="Left" Width="50
+                   ">
+
+        </Rectangle>
+        <Rectangle Fill="Azure"  DockPanel.Dock="Top" Height="50">
+
+        </Rectangle>
+        <Rectangle Fill="Brown">
+
+        </Rectangle>
+        
+    </DockPanel>
+    -->
+
+    <Grid Margin="10 10 10 10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100">
+                
+            </ColumnDefinition>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition/>
+
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Rectangle Fill="Beige" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2">
+
+        </Rectangle>
+        <Label>
+            This is a label
+        </Label>
+        <TextBox Grid.Row="0" Grid.Column="1" Text="to all my niggas">
+            
+        </TextBox>
+        <ComboBox Grid.Row="0" Grid.Column="2">
+            
+        </ComboBox>
+        <Button Grid.Row="1" Grid.Column="0" Background="Gold" Foreground="Azure" FontSize="20" FontFamily="calibri" BorderBrush="Brown" BorderThickness="5">
+            To all your niggas
+        </Button>
+        <CheckBox Grid.Row="1" Grid.Column="1">
+            This is a CheckBox
+        </CheckBox>
+            
+    </Grid>
     
 </Window>
