--- a/WPFDemo/App.xaml
+++ b/WPFDemo/App.xaml
@@ -2,8 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFDemo"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Calculator.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <Style TargetType="Button" x:Key="operators" BasedOn="{StaticResource {x:Type Button}}">
+                <Setter Property="Background" Value="orange">
+
+                </Setter>
+                <Setter Property="Foreground" Value="white">
+
+                </Setter>
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="25">
+                    
+                </Setter>
+            </Style>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
