--- a/WPFDemo/App.xaml
+++ b/WPFDemo/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFDemo"
-             StartupUri="Calculator.xaml">
+             StartupUri="viewModels/Login.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <Style TargetType="Button" x:Key="operators" BasedOn="{StaticResource {x:Type Button}}">
@@ -14,11 +14,30 @@
                 </Setter>
             </Style>
             <Style TargetType="Button">
-                <Setter Property="FontSize" Value="25">
+                <Setter Property="FontSize" Value="20"/>
+            </Style>
+            <Style TargetType="TextBox" x:Key="text" BasedOn="{StaticResource {x:Type TextBox}}">
+                <Setter Property="Height" Value="20">
                     
                 </Setter>
+                <Setter Property="Width" Value="300">
+                    
+                </Setter>
+                <Setter Property="HorizontalAlignment" Value="Left">
+                    
+                </Setter>
+                <Setter Property="VerticalAlignment" Value="Center">
+
+                </Setter>
             </Style>
-            
+            <Style TargetType="Label" x:Key="instructionLabels" BasedOn="{StaticResource {x:Type Label}}">
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+            </Style>
+            <Style TargetType="Label" x:Key="loginResult" BasedOn="{StaticResource {x:Type Label}}">
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="HorizontalAlignment" Value="Center"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
