--- a/WPFDemo/App.xaml
+++ b/WPFDemo/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFDemo"
-             StartupUri="viewModels/Login.xaml">
+             StartupUri="randomStudent.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <Style TargetType="Button" x:Key="operators" BasedOn="{StaticResource {x:Type Button}}">
@@ -12,8 +12,6 @@
                 <Setter Property="Foreground" Value="white">
 
                 </Setter>
-            </Style>
-            <Style TargetType="Button">
                 <Setter Property="FontSize" Value="20"/>
             </Style>
             <Style TargetType="TextBox" x:Key="text" BasedOn="{StaticResource {x:Type TextBox}}">
