--- a/WPFDemo/App.xaml
+++ b/WPFDemo/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFDemo"
-             StartupUri="randomStudent.xaml">
+             StartupUri="StudentView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <Style TargetType="Button" x:Key="operators" BasedOn="{StaticResource {x:Type Button}}">
