--- a/WPFDemo/randomStudent.xaml
+++ b/WPFDemo/randomStudent.xaml
@@ -6,6 +6,12 @@
         xmlns:local="clr-namespace:WPFDemo"
         mc:Ignorable="d"
         Title="randomStudent" Height="450" Width="800">
+
+    <Window.Background>
+        <ImageBrush ImageSource="Images/Classroom.jpg" />
+    </Window.Background>
+
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
