--- a/WPFDemo/viewModels/Login.xaml
+++ b/WPFDemo/viewModels/Login.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WPFDemo.viewModels.Login"
+﻿<Page x:Class="WPFDemo.viewModels.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFDemo.viewModels"
-        mc:Ignorable="d"
-        Title="Login" Height="450" Width="800">
+        mc:Ignorable="d">
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -28,7 +28,7 @@
         <Label Grid.Row="1" Grid.Column="1" Style="{StaticResource instructionLabels}" Content="Username:"></Label>
         <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource text}" Text="{Binding username, UpdateSourceTrigger=PropertyChanged}"></TextBox>
         <Label Grid.Row="4" Grid.Column="1" Style="{StaticResource instructionLabels}" Content="Password:"></Label>
-        <TextBox Grid.Row="5" Grid.Column="1" Style="{StaticResource text}" Text="{Binding password, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <PasswordBox Grid.Row="5" Grid.Column="1" PasswordChanged="PasswordBox_PasswordChanged"></PasswordBox>
         <Button Grid.Row="7" Grid.Column="1" Style="{StaticResource operators}" Click="Button_Click" IsEnabled="{Binding canLogin}">
                 <Grid>
                     <Image Source="..\Images\fotoCisti.jpg" Stretch="Fill" />
@@ -39,4 +39,4 @@
         <Image Source="../Images/bassogog.png" Grid.Row="2" Grid.RowSpan="6"></Image>
         <Image Source="../Images/DJMAD.png" Grid.Row="2" Grid.Column="2" Grid.RowSpan="6"></Image>
     </Grid>
-</Window>
+</Page>
