--- a/WPFDemo/Calculator.xaml
+++ b/WPFDemo/Calculator.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFDemo.Calculator"
+﻿<Page x:Class="WPFDemo.Calculator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -45,4 +45,4 @@
         <Button Grid.Row="5" Grid.Column="3" TextBlock.TextAlignment="Right" Style="{StaticResource operators}"> = </Button>
         
     </Grid>
-</Window>
+</Page>
