--- a/WPFDemo/StudentView.xaml
+++ b/WPFDemo/StudentView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFDemo.StudentView"
+﻿<Page x:Class="WPFDemo.StudentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:WPFDemo"
         mc:Ignorable="d"
         Title="StudentView" Height="450" Width="800">
-    <Window.Background>
+    <Page.Background>
         <ImageBrush ImageSource="Images/Classroom.jpg" />
-    </Window.Background>
+    </Page.Background>
 
  
     <Grid Margin="10">
@@ -42,4 +42,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</Window>
+</Page>
