--- a/WPFDemo/randomStudent.xaml
+++ b/WPFDemo/randomStudent.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPFDemo.randomStudent"
+﻿<Page x:Class="WPFDemo.randomStudent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="randomStudent" Height="450" Width="800">
 
-    <Window.Background>
+    <Page.Background>
         <ImageBrush ImageSource="Images/Classroom.jpg" />
-    </Window.Background>
+    </Page.Background>
 
 
     <Grid>
@@ -34,4 +34,4 @@
         <Button Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Style="{StaticResource operators}" Click="Button_Click_1">Select Random Student</Button>
         
     </Grid>
-</Window>
+</Page>
